Loading the initramfs module
Update limine.h version
Add path of an elf file to the limine.conf
Fix the kprint_hex_64 and kprint_hex_32 functions

--- a/limine.conf
+++ b/limine.conf
@@ -1,5 +1,8 @@
 timeout: 5
+serial: yes
+graphics: yes
 
 /nyanOS
     protocol: limine
     path: boot():/boot/nyanOS
+    module_path: boot():/boot/MYPROG.ELF
