Basic Shell program
Support "hi" and "clear" commands

--- a/limine.conf
+++ b/limine.conf
@@ -5,4 +5,4 @@ graphics: yes
 /nyanOS
     protocol: limine
     path: boot():/boot/nyanOS
-    module_path: boot():/boot/MYPROG.ELF
+    module_path: boot():/boot/SHELL.ELF
