Implement a simple root filesystem packaged as a .tar file
Syscall support the sys_num of 6, for reading files
Add tar.c and tar.h

--- a/limine.conf
+++ b/limine.conf
@@ -6,3 +6,4 @@ graphics: yes
     protocol: limine
     path: boot():/boot/nyanOS
     module_path: boot():/boot/SHELL.ELF
+    module_path: boot():/boot/ROOTFS.TAR
